z-index fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,3 +40,7 @@ body {
     @apply text-white;
   }
 }
+
+.recharts-tooltip-wrapper {
+  z-index: 10;
+}
